# complex-reaction-time-build

./: .env.example  .gitignore  02_PRD.md  04_Modifications_PRD.md  07_Modifications_PRD.md  ACCEPTANCE.md  DECISIONS_TAKEN.md  REACTION_TIME_CALCULATION.md  README.md  RESEARCHER_TRAINING_GUIDE.md  SESSION_TIMELINE.md  docker-compose.dev.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_mod2_add_srt_task_type.py  0003_mod3_protocol_and_labels.py  0004_mod4_groups.py  0005_mod5_activation_gating.py  0006_mod7_drop_per_stage_task_types.py
backend/app/: config.py  database.py  db_types.py  deps.py  main.py  models.py  security.py  task_defaults.py
backend/app/routers/: auth.py  demographics.py  exports.py  groups.py  health.py  participants.py  runtime.py  sessions.py  statistics.py  studies.py  users.py
backend/app/schemas/: auth.py  common.py  demographics.py  groups.py  participants.py  sessions.py  statistics.py  studies.py  trials.py  users.py
backend/app/services/: codes.py  csv_export.py  exports.py  protocol.py  rate_limit.py  seed.py  sessions.py  statistics.py
backend/tests/: conftest.py  helpers.py  test_auth.py  test_auth_realm.py  test_demographics.py  test_exports.py  test_groups.py  test_participants.py  test_protocol.py  test_runtime.py  test_sessions.py  test_sessions_group.py  test_srt.py  test_statistics.py  test_studies.py  test_users.py
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  (+1 more)
(+59 files in other folders)
